fix: correctly assign z-index to element

--- a/iframe/style.css
+++ b/iframe/style.css
@@ -1,4 +1,5 @@
 * {
+  position: relative;
   transition-property: color, background-color;
   box-sizing: border-box;
   margin: 0;
